# opentherm-wolf-cwl

./: .gitignore  README.md
decode/: go.mod  main.go
esp32/: Cargo.toml  Makefile  README.md  platformio.ini  sdkconfig.defaults  upload-ota.sh
esp32-rust/: Cargo.toml  Makefile  build.rs
esp32/components/opentherm/: FunctionalInterrupt.h  opentherm_ffi.cpp  opentherm_ffi.h
esp32/include/: config.h
esp32/openspec/changes/archive/2026-05-01-i18n-english-german/: proposal.md
esp32/openspec/changes/archive/2026-05-01-schedule-ui-improvements/: design.md
esp32/openspec/changes/archive/2026-05-01-schedule-ui-improvements/specs/schedule-empty-timeline/: spec.md
esp32/openspec/changes/remove-cpp-consolidate-esp32/: proposal.md
esp32/openspec/changes/remove-cpp-consolidate-esp32/specs/repo-consolidation/: spec.md
esp32/scripts/: gzip_webfiles.py  version.py
esp32/src/: ap_mode.cpp  ap_mode.h  app_state.rs  config.rs  config_manager.cpp  config_manager.h  cwl_data.rs  display.cpp  display.h  display.rs  encoder.cpp  encoder.h  i18n.rs  logging.h  main.cpp  mqtt.rs  mqtt_client.cpp  mqtt_client.h  network.cpp  network.h  opentherm_ffi.rs  ot_master.cpp  ot_master.h  ot_master.rs  scheduler.cpp  scheduler.h  status.cpp  status.h  watchdog.cpp  watchdog.h  watchdog.rs  webserver.cpp  webserver.h  wolf_cwl.cpp  wolf_cwl.h
esp32/web/: index.html  package-lock.json  package.json  vite.config.ts
esp32/web/src/: App.tsx  OledMirror.tsx  StatusTab.test.tsx  StatusTab.tsx  api.ts  style.css  translations.ts
pcb/: Makefile  README.md  generate_3d_models.py  (+3 more)
(+143 files in other folders)
